objects/EUR_CRM_Criteria_Answer__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Base_Currency__c</fullName>
        <label>Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Base_Integer__c</fullName>
        <label>Base Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Base_Number__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;EUR_CRM_Currency_Input&quot;,  TEXT(EUR_CRM_Base_Currency__c), 
IF(RecordType.DeveloperName = &quot;EUR_CRM_Integer_Input&quot;, TEXT(EUR_CRM_Base_Integer__c), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equal (=)</fullName>
                </value>
                <value>
                    <fullName>Not Equal (!=)</fullName>
                </value>
                <value>
                    <fullName>Less Than (&lt;)</fullName>
                </value>
                <value>
                    <fullName>Greater Than (&gt;)</fullName>
                </value>
                <value>
                    <fullName>Less Than or Equal (&lt;=)</fullName>
                </value>
                <value>
                    <fullName>Greater Than or Equal (&gt;=)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Threshold__c</fullName>
        <label>Criteria Threshold</label>
        <referenceTo>EUR_CRM_Criteria_Threshold__c</referenceTo>
        <relationshipName>EUR_PROS_Criteria_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Statement__c</fullName>
        <formula>EUR_CRM_Criteria_Threshold__r.EUR_CRM_Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Criteria Answer (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Label__c</columns>
        <columns>EUR_CRM_Base_Currency__c</columns>
        <columns>EUR_CRM_Base_Integer__c</columns>
        <columns>EUR_CRM_Base_Number__c</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_Criteria_Answer</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Base_Integer__c</columns>
        <columns>EUR_CRM_Label__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>DK Criteria Answer</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Criteria_Answer_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Base_Integer__c</columns>
        <columns>EUR_CRM_Label__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>BGN</value>
        </filters>
        <label>EUR BG All Criteria Answer View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH_Criteria_Answer</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Base_Integer__c</columns>
        <columns>EUR_CRM_Base_Number__c</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Label__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>CHF</value>
        </filters>
        <label>EUR CH Criteria Answer</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_MA_Criteria_Answer</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Base_Integer__c</columns>
        <columns>EUR_CRM_Base_Number__c</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Label__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>MAD</value>
        </filters>
        <label>EUR MA Criteria Answer</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Criteria_Answer_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Base_Integer__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_External_ID__c</field>
            <operation>startsWith</operation>
            <value>PT_</value>
        </filters>
        <label>EUR PT All Criteria Answer View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Criteria_Answer</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Label__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>RUB</value>
        </filters>
        <label>EUR RU Criteria Answer</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Criteria_Answer_Picklist</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Display_Order__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>RUB</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Criteria_Answer__c.EUR_CRM_Picklist</value>
        </filters>
        <label>RU Criteria Answer - Picklist</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Criteria_Answer</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold__c</columns>
        <columns>EUR_CRM_Label__c</columns>
        <columns>EUR_CRM_Statement__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>ZAR</value>
        </filters>
        <label>EUR ZA Criteria Answer</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Criteria Answer No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Answer (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_Boolean</fullName>
        <active>true</active>
        <label>Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Currency_Input</fullName>
        <active>true</active>
        <label>Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Integer_Input</fullName>
        <active>true</active>
        <label>Integer Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Picklist</fullName>
        <active>true</active>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Text_Input</fullName>
        <active>true</active>
        <label>Text Input</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>